@@ -194,6 +194,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Clean up Special:Listusers; add an "(all)" label to the group selection box
 * (bug 5812) Use appropriate link colour in Special:Mostlinked
 * (bug 5802) {{CURRENTMONTHNAME}} variable broken in Vietnamese locale
+* (bug 5817) Appropriate handling for Special:Recentchangeslinked where the target
+  page doesn't exist
 
 == Compatibility ==
 
